2004-09-19  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "mk" to ALL_LINGUAS.

2004-09-09  Ankit Patel <ankit@redhat.com>

	* configure.in: Add 'gu' (Gujarati) to ALL_LINGUAS.

2004-09-02  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-09  Mikael Hallendal  <micke@imendio.com>

	* src/Makefile.am: Added bacon-message-connection.[ch]
	* src/bacon-message-connection.[ch]: Copied from Hadess.
	* src/dh-main.c: Rewritten to use bacon-message-connection instead of 
	  own hack for unique app.

2004-08-05  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Add accelerators for back and forward. Patch
	from Johan Svedberg <johan@svedberg.pp.se>.

2004-07-25  Mikael Hallendal  <micke@imendio.com>

	* Release 0.9.1
	
	* Makefile.am: Don't try to add spec file to tarball
	* NEWS: Added updated translations

2004-07-25  Mikael Hallendal  <micke@imendio.com>

	* NEWS: Updated for 0.9.1
	* configure.in: Bumped to 0.9.1 and removed the spec-file.
	* devhelp.spec.in: Removed.

2004-07-25  Mikael Hallendal  <micke@imendio.com>

	* src/dh-window.c:
	(window_populate): Make sure that the paned isn't 0 wide.
	(window_restore_state): Make sure that the window isn't 0x0 pixels
	(dh_window_show): Make sure that the HTML view is realized before
	  trying to write HTML to it. Fixed bug #147343.

2004-07-02  Mikael Hallendal  <micke@imendio.com>

	* src/dh-base.c: (base_add_books):
	- Don't build and check for books "." and "..".
	- Patch from Russel Shaw.

2004-07-02  Mikael Hallendal  <micke@imendio.com>

	* src/dh-base.c: (base_init_books):
	- Read books from home directory first to always make sure that user 
	  installed documentation is shown if there are duplicates.

2004-05-18  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh: Use automake 1.7

2004-05-06  Mikael Hallendal  <micke@imendio.com>

	* src/dh-keyword-model.c: (dh_keyword_model_filter):
	- If exact match is found, return it so that we can show it in the