@@ -1,3 +1,9 @@
+2004-09-27  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* src/dh-keyword-model.c: (dh_keyword_model_filter):
+        - Support searching for sub strings "gtk new" would find all functions
+          including both gtk and new.
+
 2004-09-19  Abel Cheung  <maddog@linuxhall.org>
 
 	* configure.in: Added "mk" to ALL_LINGUAS.
